--- a/src/tesla_ce_supervisor/apps/web/templates/items/service_configuration_table.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/items/service_configuration_table.html
@@ -44,7 +44,7 @@
                 <i class="bi bi-arrow-repeat"></i>
             </button>
 
-            <button type="button" class="btn btn-sm btn-secondary step" data-step="{{ step }}" data-action="download">
+            <button type="button" class="btn btn-sm btn-secondary step-action" data-step="{{ step }}" data-action="download">
                 <i class="bi bi-cloud-download"></i>
             </button>
 
