add docker-compose.yml. Added home url. Hide nav options in menu

--- a/src/tesla_ce_supervisor/apps/web/templates/base.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/base.html
@@ -24,12 +24,14 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
+                {% if false %}
                 <li class="nav-item">
                     <a class="nav-link" href="#">Setup</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Monitoring</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
