celery and minio logo changed

--- a/src/tesla_ce_supervisor/apps/web/templates/services/config_blocs/rabbitmq.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/services/config_blocs/rabbitmq.html
@@ -4,7 +4,7 @@
     <div class="card h-100">
         <div class="card-body row">
             <div class="col-md-4 align-content-center text-center">
-                <img src="{% static 'img/Logo-redis.svg' %}" class="img-fluid rounded-start logo" alt="Redis image">
+                <img src="{% static 'img/celery_logo.png' %}" class="img-fluid rounded-start logo" alt="Celery image">
             </div>
             <div class="col-md-8">
                 <h5 class="card-title">RabbitMQ & Celery configuration</h5>
