--- a/src/tesla_ce_supervisor/apps/web/templates/services/config_blocs/minio.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/services/config_blocs/minio.html
@@ -4,7 +4,7 @@
     <div class="card h-100">
         <div class="card-body row">
             <div class="col-md-4 align-content-center text-center">
-                <img src="{% static 'img/Logo-redis.svg' %}" class="img-fluid rounded-start logo" alt="Redis image">
+                <img src="{% static 'img/MINIO_Bird_logo.png' %}" class="img-fluid rounded-start logo" alt="MINIO image" style="max-height: 200px;">
             </div>
             <div class="col-md-8">
                 <h5 class="card-title">Storage configuration</h5>
